@@ -3,7 +3,10 @@ CHANGES.txt - 1.7.0 - 2013-07-16
 
 CHANGES IN CUPS V1.7.0
 
-	- Fix a compile error in libcups (<rdar://problem/14467141>)
+	- httpGetFd, httpGetFile, httpPutFd, and httpPutFile did not
+	  automatically reconnect if the server closed the connecion after the
+	  previous response.
+	- Fixed a compile error in libcups (<rdar://problem/14467141>)
 	- The scheduler incorrectly did not pass a FINAL_CONTENT_TYPE
 	  environment variable to the filters or backend
 	  (<rdar://problem/14355011>)
